<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">rentranslate</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_price2">Price:##\u20ac</string>
    <string name="lbl_city">City:</string>
    <string name="lbl_min_beds">Min beds</string>
    <string name="lbl_max_price">Max Price:</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_price_10">Price: 10\u20ac</string>
    <string name="lbl_search">Search...</string>
    <string name="lbl_1">1</string>
    <string name="lbl_rt">RT</string>
    <string name="msg_owner_andrea_r">Owner: Andrea Rossi</string>
    <string name="lbl_andrea_rossi">Andrea Rossi</string>
    <string name="msg_address_street">Address: Street, ##, City</string>
    <string name="msg_name_andrea_ro">Name: Andrea Rossi</string>
    <string name="lbl_place">Place</string>
    <string name="lbl_edit2">edit...</string>
    <string name="msg_you_can_come_to">You can come to see the apartment 
thursday at 17:00</string>
    <string name="lbl_description">Description:</string>
    <string name="msg_language_engli">Language: English</string>
    <string name="msg_puoi_venire_a_v">"Puoi venire a vedere l'appartamento gioved? alle 17:00"</string>
    <string name="lbl_space_50m_2">Space: 50m^2</string>
    <string name="lbl_new_place">New Place</string>
    <string name="lbl_change_password">change Password</string>
    <string name="lbl_chats">Chats</string>
    <string name="lbl_set">Set</string>
    <string name="msg_name_anton_vol">Name: Anton Volkov</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_space">Space:</string>
    <string name="lbl_contact">Contact</string>
    <string name="lbl_change_email">Change email</string>
    <string name="lbl_city2">City</string>
    <string name="msg_account_setting">Account settings</string>
    <string name="lbl_places">Places</string>
    <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc aliquam ante velit, a condimentum ligula feugiat vel. Suspendisse id accumsan enim. Mauris interdum efficitur massa, sed dignissim nibh.</string>
    <string name="msg_ok_i_ll_be_the">"Ok, I'll be there"</string>
    <string name="msg_ok_i_ll_be_the2">Ok, I\u2019ll be there</string>
    <string name="lbl_price">Price: ##\u20ac</string>
    <string name="lbl_street_city">Street, City</string>
    <string name="msg_address_edit">Address: edit...</string>
    <string name="msg_language_itali">Language: Italian</string>
    <string name="lbl_address">Address: </string>
    <string name="lbl_150">150</string>
    <string name="lbl_account">Account</string>
    <string name="msg_please_enter_valid_nu">Please enter valid number</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
