<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="placeVM" type="com.rentranslate.app.modules.place.data.viewmodel.PlaceVM"/>
    </data>
    <LinearLayout android:id="@+id/linearPlace"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearAppheader"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageMenu"
                    android:layout_height="@dimen/_49pxh"
                    android:layout_width="@dimen/_58pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_menu"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_menu"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPlaces"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_73pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.59"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{placeVM.placeModel.txtPlaces}"
                    style="@style/txtIntersemibold32" tools:text="@string/lbl_place"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearCentre"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <LinearLayout android:id="@+id/linearPhotos"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageImgOne"
                    android:layout_height="@dimen/_218pxh"
                    android:layout_width="@dimen/_218pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_profilepicture}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_profilepicture"/>
                <ImageView android:id="@+id/imageImgOneOne"
                    android:layout_height="@dimen/_218pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_width="@dimen/_132pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_img1}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_img1"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDescription"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_41pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{placeVM.placeModel.txtDescription}"
                style="@style/txtRobotobold16" tools:text="@string/lbl_description"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtDescriptionOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent"
                android:text="@{placeVM.placeModel.txtDescriptionOne}"
                style="@style/txtRobotobold16" tools:text="@string/msg_lorem_ipsum_dol"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAddressStreet"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{placeVM.placeModel.txtAddressStreet}"
                style="@style/txtRobotobold16" tools:text="@string/msg_address_street"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOwnerAndreaR"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{placeVM.placeModel.txtOwnerAndreaR}"
                style="@style/txtRobotobold16" tools:text="@string/msg_owner_andrea_r"/>
            <TextView android:ellipsize="end" android:id="@+id/txtPrice"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{placeVM.placeModel.txtPrice}"
                style="@style/txtRobotobold16" tools:text="@string/lbl_price"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnContact"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_5pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_5pxv"
                android:singleLine="true"
                android:text="@string/lbl_contact"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_contact"/>
        </LinearLayout>
    </LinearLayout>
</layout>
