<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="drawerItemFiltersModel" type="com.rentranslate.app.modules.itemfilters.data.model.DrawerItemFiltersModel"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearFilters"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearFilters1"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearCity"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtCity"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.44"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{drawerItemFiltersModel.txtCity}"
                        style="@style/txtRobotobold24" tools:text="@string/lbl_city"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtRome"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6pxh"
                        android:layout_weight="0.56"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{drawerItemFiltersModel.txtRome}"
                        style="@style/txtRobotobold24_1" tools:text="@string/lbl_rome"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearPrice"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMaxPrice"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.67"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{drawerItemFiltersModel.txtMaxPrice}"
                    style="@style/txtRobotobold24" tools:text="@string/lbl_max_price"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrice"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_weight="0.33"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{drawerItemFiltersModel.txtPrice}"
                    style="@style/txtRobotobold24_1" tools:text="@string/lbl_150"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearSpace"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSpace"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.54"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{drawerItemFiltersModel.txtSpace}"
                    style="@style/txtRobotobold24" tools:text="@string/lbl_space"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSpaceValue"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_weight="0.46"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{drawerItemFiltersModel.txtSpaceValue}"
                    style="@style/txtRobotobold24_1" tools:text="@string/lbl_50m2"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearBeds"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMinbeds"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.9"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{drawerItemFiltersModel.txtMinbeds}"
                    style="@style/txtRobotobold24" tools:text="@string/lbl_min_beds"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_weight="0.1"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{drawerItemFiltersModel.txtOne}"
                    style="@style/txtRobotobold24_1" tools:text="@string/lbl_1"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearButtons"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtButton"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.32"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_5pxv"
                    android:paddingEnd="@dimen/_5pxh"
                    android:paddingStart="@dimen/_5pxh"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@{drawerItemFiltersModel.txtButton}"
                    style="@style/txtSolidRounded" tools:text="@string/lbl_set"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtButtonOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_124pxh"
                    android:layout_weight="0.68"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_4pxv"
                    android:paddingEnd="@dimen/_5pxh"
                    android:paddingStart="@dimen/_5pxh"
                    android:paddingTop="@dimen/_5pxv"
                    android:singleLine="true"
                    android:text="@{drawerItemFiltersModel.txtButtonOne}"
                    style="@style/txtSolidRounded_1" tools:text="@string/lbl_remove"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
